--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,12 @@
+name: Print Message
 on:
   push:
     branches:
-    - main
+      - main
 
 jobs:
   my_job:
-    name: print message
-    run:
-     echo "Hello World"
+    runs-on: ubuntu-latest
+    steps:
+      - name: print message
+        run: echo "Hello World"
